--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,15 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.7
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
+
+    compile 'com.google.auto.service:auto-service:1.0-rc1'
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
