--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 
-sourceCompatibility = 1.7
 
 repositories {
     jcenter()
@@ -12,6 +11,7 @@ repositories {
 dependencies {
 
     compile 'com.google.auto.service:auto-service:1.0-rc1'
+    compile 'com.squareup:javapoet:1.5.1'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
