--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ dependencies {
 
     compile 'com.google.auto.service:auto-service:1.0-rc1'
     compile 'com.squareup:javapoet:1.5.1'
+    compile 'org.apache.commons:commons-lang3:3.0'
+
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
